--- a/Lab1/A1.md
+++ b/Lab1/A1.md
@@ -18,4 +18,10 @@
 	- Busca información con el comando "man" si no sabes cómo utilizar gcc.
 	- Compia el archivo y ejecútalo
 
+#Tarea 3
+- Crea un fichero, por ejemplo:
+$ cd $HOME # también cd ~
+$ history > history_myuser
+
+$ scp history_myuser username@192.168.1.107:destination_folder
 
